# 2d-kinetic-alpha-shapes

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Logger.hpp  Polynomial.hpp  README.md  main.cpp  simple_svg.hpp
delaunay/: Delaunator2D.cpp  Delaunator2D.hpp
kinDS/: AVLTree.hpp  BranchTrajectories.hpp  CubicHermiteSpline.hpp  Delaunator2D.cpp  Delaunator2D.hpp  HalfEdgeDelaunayGraph.cpp  HalfEdgeDelaunayGraph.hpp  HalfEdgeDelaunayGraphToSVG.hpp  IndexIterator.hpp  KineticDelaunay.cpp  KineticDelaunay.hpp  Logger.hpp  Mesh.cpp  Mesh.hpp  MeshBuilder.cpp  MeshBuilder.hpp  MeshCGAL.hpp  MeshIntersection.cpp  MeshIntersection.hpp  MeshStructure.hpp  ObjExporter.hpp  PlaneProjector.cpp  PlaneProjector.hpp  Point.cpp  Point.hpp  Polynomial.cpp  Polynomial.hpp  ProgressBar.hpp  RationalFunction.cpp  RationalFunction.hpp  RuledSurface.hpp  SegmentBuilder.cpp  SegmentBuilder.hpp  StrandTree.cpp  StrandTree.hpp  TreeMesher.cpp  TreeMesher.hpp  VoronoiMesh.cpp  VoronoiMesh.hpp  simple_svg.hpp
mapviewer/: VoronoiDiagramGenerator.cpp  VoronoiDiagramGenerator.h
tests/: test_Polynomial.cpp  test_StrandTree.cpp
voronoi/: VoronoiDiagram2D.cpp  VoronoiDiagram2D.hpp  VoronoiDiagramGenerator.cpp  VoronoiDiagramGenerator.h  VoronoiGraph.hpp
